icesquirrel-tools/src/main/java/org/iceparser/SquirrelParser.java
// Generated from org/iceparser/Squirrel.g4 by ANTLR 4.3
package org.iceparser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SquirrelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__63=1, T__62=2, T__61=3, T__60=4, T__59=5, T__58=6, T__57=7, T__56=8, 
		T__55=9, T__54=10, T__53=11, T__52=12, T__51=13, T__50=14, T__49=15, T__48=16, 
		T__47=17, T__46=18, T__45=19, T__44=20, T__43=21, T__42=22, T__41=23, 
		T__40=24, T__39=25, T__38=26, T__37=27, T__36=28, T__35=29, T__34=30, 
		T__33=31, T__32=32, T__31=33, T__30=34, T__29=35, T__28=36, T__27=37, 
		T__26=38, T__25=39, T__24=40, T__23=41, T__22=42, T__21=43, T__20=44, 
		T__19=45, T__18=46, T__17=47, T__16=48, T__15=49, T__14=50, T__13=51, 
		T__12=52, T__11=53, T__10=54, T__9=55, T__8=56, T__7=57, T__6=58, T__5=59, 
		T__4=60, T__3=61, T__2=62, T__1=63, T__0=64, TRUE=65, FALSE=66, NULL=67, 
		ROOT=68, NAME=69, NORMALSTRING=70, VERBATIMSTRING=71, OCTAL=72, INT=73, 
		HEX=74, FLOAT=75, CHAR=76, COMMA=77, ASSIGN=78, NEW_SLOT=79, VARARGS=80, 
		STATSEP=81, INC=82, DEC=83, INCVAL=84, DECVAL=85, COMMENT=86, LINE_COMMENT=87, 
		WS=88, SHEBANG=89;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'yield'", "'local'", "'['", "'*'", "'vargv'", "'<'", 
		"'continue'", "'!='", "'<='", "'resume'", "'<<'", "'</'", "'/>'", "'delegate'", 
		"'constructor'", "'}'", "'case'", "'do'", "'%'", "')'", "'throw'", "'typeof'", 
		"'const'", "'class'", "'|'", "'!'", "'foreach'", "'enum'", "']'", "'>>>'", 
		"'in'", "'default'", "'while'", "'-'", "'('", "':'", "'if'", "'?'", "'{'", 
		"':('", "'break'", "'extends'", "'else'", "'static'", "'>>'", "'^'", "'delete'", 
		"'function'", "'.'", "'+'", "'for'", "'return'", "'&&'", "'||'", "'>'", 
		"'switch'", "'clone'", "'=='", "'/'", "'vargc'", "'~'", "'>='", "'instanceof'", 
		"'true'", "'false'", "'null'", "'::'", "NAME", "NORMALSTRING", "VERBATIMSTRING", 
		"OCTAL", "INT", "HEX", "FLOAT", "CHAR", "','", "'='", "'<-'", "'...'", 
		"';'", "'++'", "'--'", "'+='", "'-='", "COMMENT", "LINE_COMMENT", "WS", 
		"SHEBANG"
	};
	public static final int
		RULE_script = 0, RULE_block = 1, RULE_stat = 2, RULE_breakstat = 3, RULE_continuestat = 4, 
		RULE_switchstat = 5, RULE_throwstat = 6, RULE_forloop = 7, RULE_foreachloop = 8, 
		RULE_dowhileloop = 9, RULE_whileloop = 10, RULE_ifstat = 11, RULE_constdef = 12, 
		RULE_enumdef = 13, RULE_switchcase = 14, RULE_defaultcase = 15, RULE_funcname = 16, 
		RULE_classstat = 17, RULE_staticvar = 18, RULE_localvar = 19, RULE_retstat = 20, 
		RULE_explist = 21, RULE_exp = 22, RULE_declare = 23, RULE_declarelist = 24, 
		RULE_classassign = 25, RULE_classassignlist = 26, RULE_assign = 27, RULE_assignlist = 28, 
		RULE_resume = 29, RULE_clone = 30, RULE_delete = 31, RULE_yield = 32, 
		RULE_vargc = 33, RULE_vargv = 34, RULE_delegate = 35, RULE_typeof = 36, 
		RULE_incexp = 37, RULE_log = 38, RULE_var = 39, RULE_functioncall = 40, 
		RULE_varOrExp = 41, RULE_nameAndArgs = 42, RULE_varSuffix = 43, RULE_args = 44, 
		RULE_namedfunction = 45, RULE_classfunction = 46, RULE_functiondef = 47, 
		RULE_nameonlylist = 48, RULE_name = 49, RULE_namelist = 50, RULE_arglist = 51, 
		RULE_funcargs = 52, RULE_classdef = 53, RULE_classconstructor = 54, RULE_arrayconstructor = 55, 
		RULE_attributesconstructor = 56, RULE_tableconstructor = 57, RULE_enumconstructor = 58, 
		RULE_enumlist = 59, RULE_primitiveitem = 60, RULE_tablerows = 61, RULE_tablerow = 62, 
		RULE_operatorOr = 63, RULE_operatorAnd = 64, RULE_operatorBinXor = 65, 
		RULE_operatorBinAnd = 66, RULE_operatorBinOr = 67, RULE_operatorShiftLeft = 68, 
		RULE_operatorShiftRight = 69, RULE_operatorShiftRightUnsigned = 70, RULE_operatorComparison = 71, 
		RULE_operatorAddSub = 72, RULE_operatorMulDivMod = 73, RULE_operatorUnary = 74, 
		RULE_number = 75, RULE_string = 76;
	public static final String[] ruleNames = {
		"script", "block", "stat", "breakstat", "continuestat", "switchstat", 
		"throwstat", "forloop", "foreachloop", "dowhileloop", "whileloop", "ifstat", 
		"constdef", "enumdef", "switchcase", "defaultcase", "funcname", "classstat", 
		"staticvar", "localvar", "retstat", "explist", "exp", "declare", "declarelist", 
		"classassign", "classassignlist", "assign", "assignlist", "resume", "clone", 
		"delete", "yield", "vargc", "vargv", "delegate", "typeof", "incexp", "log", 
		"var", "functioncall", "varOrExp", "nameAndArgs", "varSuffix", "args", 
		"namedfunction", "classfunction", "functiondef", "nameonlylist", "name", 
		"namelist", "arglist", "funcargs", "classdef", "classconstructor", "arrayconstructor", 
		"attributesconstructor", "tableconstructor", "enumconstructor", "enumlist", 
		"primitiveitem", "tablerows", "tablerow", "operatorOr", "operatorAnd", 
		"operatorBinXor", "operatorBinAnd", "operatorBinOr", "operatorShiftLeft", 
		"operatorShiftRight", "operatorShiftRightUnsigned", "operatorComparison", 
		"operatorAddSub", "operatorMulDivMod", "operatorUnary", "number", "string"
	};

	@Override
	public String getGrammarFileName() { return "Squirrel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SquirrelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SquirrelParser.EOF, 0); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitScript(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__62) | (1L << T__61) | (1L << T__60) | (1L << T__58) | (1L << T__56) | (1L << T__53) | (1L << T__49) | (1L << T__45) | (1L << T__42) | (1L << T__41) | (1L << T__40) | (1L << T__39) | (1L << T__37) | (1L << T__36) | (1L << T__35) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__26) | (1L << T__24) | (1L << T__22) | (1L << T__16) | (1L << T__15) | (1L << T__12) | (1L << T__11) | (1L << T__7) | (1L << T__6) | (1L << T__3) | (1L << T__2))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (TRUE - 65)) | (1L << (FALSE - 65)) | (1L << (NULL - 65)) | (1L << (ROOT - 65)) | (1L << (NAME - 65)) | (1L << (NORMALSTRING - 65)) | (1L << (VERBATIMSTRING - 65)) | (1L << (OCTAL - 65)) | (1L << (INT - 65)) | (1L << (HEX - 65)) | (1L << (FLOAT - 65)) | (1L << (CHAR - 65)) | (1L << (STATSEP - 65)) | (1L << (INC - 65)) | (1L << (DEC - 65)))) != 0)) {
				{
				{
				setState(154); stat();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); match(T__24);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__62) | (1L << T__61) | (1L << T__60) | (1L << T__58) | (1L << T__56) | (1L << T__53) | (1L << T__49) | (1L << T__45) | (1L << T__42) | (1L << T__41) | (1L << T__40) | (1L << T__39) | (1L << T__37) | (1L << T__36) | (1L << T__35) | (1L << T__30) | (1L << T__29) | (1L << T__28) | (1L << T__26) | (1L << T__24) | (1L << T__22) | (1L << T__16) | (1L << T__15) | (1L << T__12) | (1L << T__11) | (1L << T__7) | (1L << T__6) | (1L << T__3) | (1L << T__2))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (TRUE - 65)) | (1L << (FALSE - 65)) | (1L << (NULL - 65)) | (1L << (ROOT - 65)) | (1L << (NAME - 65)) | (1L << (NORMALSTRING - 65)) | (1L << (VERBATIMSTRING - 65)) | (1L << (OCTAL - 65)) | (1L << (INT - 65)) | (1L << (HEX - 65)) | (1L << (FLOAT - 65)) | (1L << (CHAR - 65)) | (1L << (STATSEP - 65)) | (1L << (INC - 65)) | (1L << (DEC - 65)))) != 0)) {
				{
				{
				setState(163); stat();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169); match(T__47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ForloopContext forloop() {
			return getRuleContext(ForloopContext.class,0);
		}
		public DowhileloopContext dowhileloop() {
			return getRuleContext(DowhileloopContext.class,0);
		}
		public WhileloopContext whileloop() {
			return getRuleContext(WhileloopContext.class,0);
		}
		public ContinuestatContext continuestat() {
			return getRuleContext(ContinuestatContext.class,0);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public RetstatContext retstat() {
			return getRuleContext(RetstatContext.class,0);
		}
		public BreakstatContext breakstat() {
			return getRuleContext(BreakstatContext.class,0);
		}
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public NamedfunctionContext namedfunction() {
			return getRuleContext(NamedfunctionContext.class,0);
		}
		public ThrowstatContext throwstat() {
			return getRuleContext(ThrowstatContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(SquirrelParser.COMMA, i);
		}
		public EnumdefContext enumdef() {
			return getRuleContext(EnumdefContext.class,0);
		}
		public ConstdefContext constdef() {
			return getRuleContext(ConstdefContext.class,0);
		}
		public SwitchstatContext switchstat() {
			return getRuleContext(SwitchstatContext.class,0);
		}
		public TerminalNode STATSEP() { return getToken(SquirrelParser.STATSEP, 0); }
		public LocalvarContext localvar() {
			return getRuleContext(LocalvarContext.class,0);
		}
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(SquirrelParser.COMMA); }
		public ForeachloopContext foreachloop() {
			return getRuleContext(ForeachloopContext.class,0);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			int _alt;
			setState(197);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171); match(STATSEP);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(172); functioncall();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(173); breakstat();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(174); continuestat();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(175); dowhileloop();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(176); localvar();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(177); whileloop();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(178); ifstat();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(179); forloop();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(180); foreachloop();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(181); namedfunction();
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(182); throwstat();
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(183); switchstat();
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(184); constdef();
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(185); enumdef();
				}
				break;

			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(186); classdef();
				}
				break;

			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(187); retstat();
				}
				break;

			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(188); block();
				}
				break;

			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(189); exp(0);
				setState(194);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(190); match(COMMA);
						setState(191); exp(0);
						}
						} 
					}
					setState(196);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BreakstatContext extends ParserRuleContext {
		public BreakstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakstat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterBreakstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitBreakstat(this);
		}
	}

	public final BreakstatContext breakstat() throws RecognitionException {
		BreakstatContext _localctx = new BreakstatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_breakstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199); match(T__22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinuestatContext extends ParserRuleContext {
		public ContinuestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continuestat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterContinuestat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitContinuestat(this);
		}
	}

	public final ContinuestatContext continuestat() throws RecognitionException {
		ContinuestatContext _localctx = new ContinuestatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_continuestat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201); match(T__56);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwitchstatContext extends ParserRuleContext {
		public SwitchcaseContext switchcase(int i) {
			return getRuleContext(SwitchcaseContext.class,i);
		}
		public List<SwitchcaseContext> switchcase() {
			return getRuleContexts(SwitchcaseContext.class);
		}
		public DefaultcaseContext defaultcase() {
			return getRuleContext(DefaultcaseContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SwitchstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchstat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterSwitchstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitSwitchstat(this);
		}
	}

	public final SwitchstatContext switchstat() throws RecognitionException {
		SwitchstatContext _localctx = new SwitchstatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_switchstat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203); match(T__7);
			setState(204); match(T__28);
			setState(205); exp(0);
			setState(206); match(T__43);
			setState(207); match(T__24);
			setState(217);
			switch (_input.LA(1)) {
			case T__46:
				{
				{
				setState(209); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(208); switchcase();
					}
					}
					setState(211); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__46 );
				setState(214);
				_la = _input.LA(1);
				if (_la==T__31) {
					{
					setState(213); defaultcase();
					}
				}

				}
				}
				break;
			case T__31:
				{
				setState(216); defaultcase();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(219); match(T__47);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThrowstatContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ThrowstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_throwstat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterThrowstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitThrowstat(this);
		}
	}

	public final ThrowstatContext throwstat() throws RecognitionException {
		ThrowstatContext _localctx = new ThrowstatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_throwstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221); match(T__42);
			setState(222); exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForloopContext extends ParserRuleContext {
		public LocalvarContext localvar() {
			return getRuleContext(LocalvarContext.class,0);
		}
		public List<TerminalNode> STATSEP() { return getTokens(SquirrelParser.STATSEP); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode STATSEP(int i) {
			return getToken(SquirrelParser.STATSEP, i);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public AssignlistContext assignlist() {
			return getRuleContext(AssignlistContext.class,0);
		}
		public ForloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forloop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).enterForloop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SquirrelListener ) ((SquirrelListener)listener).exitForloop(this);
		}
	}
